# seltran

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: main.py
src/seltran/: __init__.py  __main__.py  gui.py  translator.py
src/seltran/gui/: __init__.py  app.py  editor.py  tk_call_queue.py
