[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'seltran'
version = '0.1.0'
dependencies = [
    "pysubs2",
    "spacy",
    "jamdict",
    "jamdict-data",
    "ginza",
    "ja_ginza",
    "customtkinter",
    "jphones @ git+https://github.com/JRMeyer/jphones.git",
    "six",
    "semidbm",
    "pykakasi",
    "japanese-numbers-python",
]

[project.gui-scripts]
seltran-editor = "seltran.gui:main"
