[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'seltran'
version = '0.1.0'
dependencies = [
    "pysubs2",
    "spacy",
    "jamdict",
    "jamdict-data",
    "ginza",
    "ja_ginza",
    "customtkinter",
    "pykakasi",
]

[project.gui-scripts]
seltran-editor = "seltran.gui:main"
